added jwt login & validation
